added CSS to project

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,3 +28,9 @@ p {
     text-align: center;
     font-size: 30px;
 }
+.card {
+    width: 80%;
+    margin: 40px auto;
+    border: 5px solid grey;
+    box-shadow: 5px 10px #888
+}
